fix some spacing issues on footer

--- a/src/components/footer/style.module.css
+++ b/src/components/footer/style.module.css
@@ -102,7 +102,7 @@
     max-width: 100%;
     width: 120px;
     margin-right: 20px;
-    margin-top: -8px;
+    margin-top: -5px;
   }
 
   .content {
